[package]
name = "check_keyword"
version = "0.1.1"
authors = ["Joel Courtney <joel.e.courtney@gmail.com>"]
edition = "2018"
description = "A trait for Strings and &str's to check if a string is a reserved keyword and convert it to a safe non-keyword if so."
readme = "README.md"
repository = "https://github.com/JoelCourtney/check_keyword"
license = "MIT OR Apache-2.0"
keywords = ["keyword", "reserved", "macro", "string"]

[lib]
proc-macro = false
path = "src/lib.rs"

[features]
default = ["2018"]
2018 = []