[package]
name = "check_keyword"
version = "0.2.0"
authors = ["Joel Courtney <joel.e.courtney@gmail.com>"]
edition = "2021"
description = "A trait for String-like types to check if it is a reserved keyword and convert it to a safe non-keyword if so."
readme = "README.md"
repository = "https://github.com/JoelCourtney/check_keyword"
license = "MIT OR Apache-2.0"
keywords = ["keyword", "reserved", "string"]

[lib]
proc-macro = false
path = "src/lib.rs"

[dependencies]
phf = { version = "0.11", features = ["macros"] }

[features]
default = ["2021"]
2021 = ["2018"]
2018 = []
